# xhec-mlops-project-solution

./: Dockerfile.app  README.md  environment.yml  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
config/: app_config.py  config.py
notebooks/: abalone.ipynb
src/modelling/: main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: main.py  utils.py  workflows.py
src/web_service/lib/: inference.py  models.py
