[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-solution"
authors = [
  { name = "luca-serra", email = "luca.serra@artefact.com" },
] # TODO: Add more authors if collaborators are added
description = "TODO"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/artefactory/xhec-mlops-project-solution"
"Documentation" = "https://artefactory.github.io/xhec-mlops-project-solution"

[tool.setuptools]
packages = ["src", "config"]

[tool.ruff]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "D",
  "ANN",
  "Q",
  "RET",
  "ARG",
  "PTH",
  "PD",
] # See: https://beta.ruff.rs/docs/rules/
ignore = [
  "D100",
  "D101",
  "D103",
  "D203",
  "D213",
  "ANN101",
  "ANN102",
  "N803",
  "PTH123",
  "PD901",
  "RET504",
  "N806",
]
line-length = 100
target-version = "py310"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.pydocstyle]
convention = "google"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''

[tool.isort]
profile = "black"
